# central_command

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
src/central_command/: settings.py
src/persistence/: admin.py
src/server/migrations/: 0002_auto_20241019_2259.py
