[project]
name = "central-command"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "Django~=3.2.24",
    "django-post-office~=3.8.0",
    "djangorestframework~=3.14.0",
    "django-rest-knox~=4.2.0",
    "drf-spectacular~=0.27.1",
    "gunicorn~=20.1.0",
    "psycopg2-binary~=2.9.9",
    "python-dotenv~=0.19.2",
    "whitenoise~=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/central_command"]

[tool.uv]
dev-dependencies = [
    "pre-commit~=4.0",
    "ruff~=0.7",
    "mypy>=1.7.1",
    # TODO: bump django and stubs. these stubs seem to be incompatible with django 3.2
    # https://github.com/typeddjango/django-stubs/tree/master?tab=readme-ov-file#version-compatibility
    "django-stubs[compatible-mypy]==4.2.7",
    "djangorestframework-stubs[compatible-mypy]==3.14.5",
]

[tool.ruff]
exclude = ["migrations"]
line-length = 121

[tool.ruff.lint]
ignore = [
    # doesn't like Optional
    # https://github.com/charliermarsh/ruff/issues/4858
    "UP007",
    # explicit raise from might be a bit too verbose, disable for now
    "B904",
    # asserts are useful in both tests and type checker persuasion
    "S101",
    # it is annoying to annotate django Meta model properties as CalssVar for no reason
    "RUF012",
    # treats a link with the word "password" in it as a hardcoded password
    "S105",
    # the limit is too low and dumb. We don't use squared monitors anymore
    "E501",
]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-django
    "DJ",
    # flake8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S",
    # flake8-comprehensions
    "C4",
    # flake8-logging-format
    "G",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # ruff
    "RUF",
]
fixable = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1
known-first-party = [
    "accounts",
    "central_command",
    "commons",
    "persistence",
]

[tool.mypy]
show_column_numbers = true
show_error_codes = true

# XXX: add new rules here
check_untyped_defs = true
warn_unused_ignores = true

plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "central_command.settings"

[[tool.mypy.overrides]]
module = [
    "post_office.*",
    "knox.*",
]
ignore_missing_imports = true
